--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			.img-service-rating {
 				border-style: solid; 
 				border-color: rgb(255, 90, 90); 
-				border-width: 2px;
+				border-width: 1px;
 			}
 
 			.menu_desktop {
@@ -114,9 +114,6 @@
 					 	alt="tech">
 						<a href="tel:+375172400021">+375(17)240-00-21</a>
 				</div><br>
-<div align="center">
-<iframe src="https://yandex.by/sprav/widget/rating-badge/1373635637?type=rating" width="150" height="50" frameborder="0"></iframe></div>
-
 				<div class="otz">
 					<span class="otz0">
 						<a href="otzivi.html">Отзывы о репетиторе >></a>
@@ -384,7 +381,7 @@
 			<div class="right1">
 				<span class="skr">
 					<a href="otzivi.html">
-					Отзывы о репетиторе с комментариями
+						Отзывы о репетиторе с комментариями
 					</a>
 				</span>
 			</div>
@@ -879,6 +876,13 @@
 		<div class="clear"></div>
 	</div>
 	<div class="clear"></div>
+	<div class="right1">
+		<span class="skr">
+			<a href="otzivi.html">
+			Отзывы о репетиторе с комментариями
+			</a>
+		</span>
+	</div>	
 	<div class="right1">
 		<div class="portal-raitings">
 			<p style="margin-left: 5px; margin-top: 15px; color: dimgray;">
