M-103. Добавлены ссылки на две новые страницы.

--- a/site_map.html
+++ b/site_map.html
@@ -351,6 +351,16 @@
 								<a class="blink" href="pdf/8d.pdf">ТВиМС, математическое программирование</a><br>
 								<a class="blink" href="pdf/8e.pdf">ЭММ</a>
 							</p>
+
+					<h2 class="mainleft">Взрослым</h2>
+						<p class="zgt">
+							<a class="blink" href="mathematics-for-professionals.html">Математика для взрослых</a><br>
+						</p>
+
+					<h2 class="mainleft">Другое</h2>
+						<p class="zgt">
+							<a class="blink" href="russian-language-tutor.html">Репетитор по русскому и белорусскому языкам</a><br>
+						</p>
 			</div>
 
 			<div class="right1">
