M-124. Links to reviews on portals at main page (#132)
* M-124. Added ratings logos. Note - rating at Google one need to be increased to 5.0

* M-124. Добавлены ссылки для обоих блоков. Убран нижний отзыв.

* M-124. Отзывы на мобильном перенесены в нужное место.

* Updated google rating.

* M-124. Updated approved changes on mobile.

--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
 		<link href="style.css" rel="stylesheet" type="text/css">
 		<link REL="SHORTCUT ICON" HREF="favicon.ico">
 		<style>
+			.img-service-rating {
+				border-style: solid; 
+				border-color: rgb(255, 90, 90); 
+				border-width: 1px;
+			}
+
 			.menu_desktop {
 				display:block;
 			}
+
 			.menu_mobile {
 				display:none;
 			}
@@ -107,9 +114,6 @@
 					 	alt="tech">
 						<a href="tel:+375172400021">+375(17)240-00-21</a>
 				</div><br>
-<div align="center">
-<iframe src="https://yandex.by/sprav/widget/rating-badge/1373635637?type=rating" width="150" height="50" frameborder="0"></iframe></div>
-
 				<div class="otz">
 					<span class="otz0">
 						<a href="otzivi.html">Отзывы о репетиторе >></a>
@@ -213,6 +217,7 @@
 								</a>
 							</div>
 						</div>
+						<!--
 						<div class="ot0">
 							<div class="ot1">
 								<a href="otzivi.html#simb">
@@ -240,6 +245,7 @@
 								</a>
 							</div>
 						</div>
+						-->
 					</div>
 				</div>
 
@@ -252,18 +258,39 @@
 		<a href="otzivi.html#kovalenko">Ещё отзывы о репетиторе по математике >>
 		</a>
 	</span>
-	<p>
-		<a class="blink"
-			href="https://www.google.ru/maps/place/%D0%A0%D0%B5%D0%BF%D0%B5%D1%82%D0%B8%D1%82%D0%BE%D1%80+%D0%BF%D0%BE+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5+%D0%B8+%D0%B2%D1%8B%D1%81%D1%88%D0%B5%D0%B9+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5/@53.8441701,27.4731643,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1"
-			target="_blank">Отзывы в Google
-		</a>:<br>
-		<a class="imagelink" 
-			href="https://www.google.ru/maps/place/%D0%A0%D0%B5%D0%BF%D0%B5%D1%82%D0%B8%D1%82%D0%BE%D1%80+%D0%BF%D0%BE+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5+%D0%B8+%D0%B2%D1%8B%D1%81%D1%88%D0%B5%D0%B9+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5/@53.8441701,27.4731643,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1"
-			target="_blank">
-			<img src="images/outlogo/google.png"
-				alt="tech">
-		</a>
-	</p>
+
+	<div class="portal-raitings">
+		<p style="margin-left: 5px; margin-top: 15px; color: dimgray;">
+			Отзывы и рейтинг <br> репетитора <br> по математике <br> на интернет-порталах:<br>
+		</p>
+		<p>
+			<a class="imagelink" 
+				href="https://www.google.ru/maps/place/%D0%A0%D0%B5%D0%BF%D0%B5%D1%82%D0%B8%D1%82%D0%BE%D1%80+%D0%BF%D0%BE+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5+%D0%B8+%D0%B2%D1%8B%D1%81%D1%88%D0%B5%D0%B9+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5/@53.8441701,27.4731643,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/google-rating.png" alt="Отзывы и рейтинг репетитора по математике в Google">
+			</a>
+			<br>
+			<a class="imagelink" 
+				href="https://yandex.by/maps/org/repetitor_po_matematike_i_vysshey_matematike_ignatyev_igor_viktorovich/1373635637/reviews/"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/yandex-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс">
+			</a>
+			<br>
+			<a class="imagelink" 
+				href="https://uslugi.yandex.ru/profile/IgorViktorovichIgnatev-199845"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/yandex-service-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс.Услуги">
+			</a>
+			<br>
+			<a class="imagelink" 
+				href="https://zoon.by/minsk/p-repetitor/igor_viktorovich_ignatev/"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/zoon-rating.png" alt="Отзывы и рейтинг репетитора по математике в Zoon">
+			</a>
+		</p>
+	</div>
+
+
 	<!-- p>
 		<a class="blink"
 			href="https://mathematics-by.tam.by/otzyvy/" 
@@ -354,7 +381,7 @@
 			<div class="right1">
 				<span class="skr">
 					<a href="otzivi.html">
-					Отзывы о репетиторе с комментариями
+						Отзывы о репетиторе с комментариями
 					</a>
 				</span>
 			</div>
@@ -475,21 +502,6 @@
 					</a>
 					<span class="strelki">&gt;&gt;</span>
 				</span>
-			</div>
-			<div class="right1">
-				<p>
-					<a class="blink" 
-						href="https://www.google.ru/maps/place/%D0%A0%D0%B5%D0%BF%D0%B5%D1%82%D0%B8%D1%82%D0%BE%D1%80+%D0%BF%D0%BE+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5+%D0%B8+%D0%B2%D1%8B%D1%81%D1%88%D0%B5%D0%B9+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5/@53.8441701,27.4731643,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1" 
-						target="_blank">
-							Отзывы в Google
-					</a>:<br>
-					<a class="imagelink"
-						href="https://www.google.ru/maps/place/%D0%A0%D0%B5%D0%BF%D0%B5%D1%82%D0%B8%D1%82%D0%BE%D1%80+%D0%BF%D0%BE+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5+%D0%B8+%D0%B2%D1%8B%D1%81%D1%88%D0%B5%D0%B9+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5/@53.8441701,27.4731643,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1" 
-						target="_blank">
-							<img src="images/outlogo/google.png"
-								alt="tech">
-					</a>
-				</p>
 			</div>
 			<div class="title">Преимущества:
 			</div>
@@ -865,13 +877,43 @@
 	</div>
 	<div class="clear"></div>
 	<div class="right1">
-		<!-- p>
-			<a class="blink" href="https://mathematics-by.tam.by/otzyvy/" target="_blank">Отзывы на Tam.by</a>:<br>
-			<a class="imagelink" href="https://mathematics-by.tam.by/otzyvy/" target="_blank">
-				<img src="images/outlogo/tamby.png"
-					alt="tech">
+		<span class="skr">
+			<a href="otzivi.html">
+			Отзывы о репетиторе с комментариями
 			</a>
-		</p -->
+		</span>
+	</div>	
+	<div class="right1">
+		<div class="portal-raitings">
+			<p style="margin-left: 5px; margin-top: 15px; color: dimgray;">
+				Отзывы и рейтинг <br> репетитора <br> по математике <br> на интернет-порталах:<br>
+			</p>
+			<p>
+				<a class="imagelink" 
+					href="https://www.google.ru/maps/place/%D0%A0%D0%B5%D0%BF%D0%B5%D1%82%D0%B8%D1%82%D0%BE%D1%80+%D0%BF%D0%BE+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5+%D0%B8+%D0%B2%D1%8B%D1%81%D1%88%D0%B5%D0%B9+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5/@53.8441701,27.4731643,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1"
+					target="_blank">
+					<img class="img-service-rating" src="images/outlogo/google-rating.png" alt="Отзывы и рейтинг репетитора по математике в Google">
+				</a>
+				<br>
+				<a class="imagelink" 
+					href="https://yandex.by/maps/org/repetitor_po_matematike_i_vysshey_matematike_ignatyev_igor_viktorovich/1373635637/reviews/"
+					target="_blank">
+					<img class="img-service-rating" src="images/outlogo/yandex-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс">
+				</a>
+				<br>
+				<a class="imagelink" 
+					href="https://uslugi.yandex.ru/profile/IgorViktorovichIgnatev-199845"
+					target="_blank">
+					<img class="img-service-rating" src="images/outlogo/yandex-service-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс.Услуги">
+				</a>
+				<br>
+				<a class="imagelink" 
+					href="https://zoon.by/minsk/p-repetitor/igor_viktorovich_ignatev/"
+					target="_blank">
+					<img class="img-service-rating" src="images/outlogo/zoon-rating.png" alt="Отзывы и рейтинг репетитора по математике в Zoon">
+				</a>
+			</p>
+		</div>
 	</div>
 		
 	<div class="no">
