M-126. Updated link for newly created page.

--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
 				дальнейший выход на специальные дисциплины.
 				</span>
 				<span class="p1">
-					<a href="texraboti.html">
+					<a href="mathematics-for-professionals.html">
 					Подробная информация о репетиторе по математике для взрослых
 					</a>
 					<span class="strelki">&gt;&gt;</span>
