--- a/russian-language-tutor.html
+++ b/russian-language-tutor.html
@@ -40,7 +40,7 @@
 			</span>
 			</div>
 			<div class="g3">
-				<img src="images/cat/1.png" alt="tech">
+				<img src="images/cat/russian-language/cat-russian-language-1.png" alt="tech">
 			</div>
 			<div class="clear">
 			</div>
@@ -95,14 +95,13 @@
 			</div>
 		</div>
 
-		<!-- 
 		<div class="righten">
 			<div class="n1">
 				<img src="./images/cat/0.png"
 					alt="tech">
 			</div>
 			<div class="n1">
-				<img src="./images/cat/2.png"
+				<img src="./images/cat/russian-language/cat-russian-language-2.png"
 					alt="tech">
 			</div>
 			<div class="n1">
@@ -110,7 +109,7 @@
 					alt="tech">
 			</div>
 			<div class="n1">
-				<img src="./images/cat/3.png"
+				<img src="./images/cat/russian-language/cat-russian-language-3.png"
 					alt="tech">
 			</div>
 			<div class="n1">
@@ -118,7 +117,7 @@
 					alt="tech">
 			</div>
 			<div class="n1">
-				<img src="./images/cat/4.png"
+				<img src="./images/cat/russian-language/cat-russian-language-4.png"
 					alt="tech">
 			</div>
 			<div class="n1">
@@ -126,7 +125,7 @@
 					alt="tech">
 			</div>
 			<div class="n1">
-				<img src="./images/cat/5.png"
+				<img src="./images/cat/russian-language/cat-russian-language-5.png"
 					alt="tech">
 			</div>
 			<div class="n1">
@@ -144,7 +143,6 @@
 				</div>
 			</div>
 		</div>
-		-->
 		
 		<div class="main">
 
