M-141. Updated menu at all pages.

--- a/index.html
+++ b/index.html
@@ -10,29 +10,13 @@
 		<meta name="keywords" content="репетитор, репетитор по математике, репетитор математика, репетитор математики, подготовка по математике, ЦТ подготовка, ЦТ математика, подготовка по математике к ЦТ, репетитор класс, репетитор по высшей математике, репетитор Минск, репетитор по математике в Минске, репетитор по алгебре, репетитор по геометрии">
 		<meta name="yandex-verification" content="af875abcb7bc85a1">
 		<link href="style.css" rel="stylesheet" type="text/css">
+		<link href="style-new.css" rel="stylesheet" type="text/css">
 		<link REL="SHORTCUT ICON" HREF="favicon.ico">
 		<style>
 			.img-service-rating {
 				border-style: solid; 
 				border-color: rgb(255, 90, 90); 
 				border-width: 1px;
-			}
-
-			.menu_desktop {
-				display:block;
-			}
-
-			.menu_mobile {
-				display:none;
-			}
-
-			@media screen and (max-width:800px){
-				.menu_desktop {
-					display:none;
-				}
-				.menu_mobile {
-					display:block;
-				}
 			}
 		</style>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
