--- a/mestopolozhenie.html
+++ b/mestopolozhenie.html
@@ -8,6 +8,7 @@
 	<meta content="репетитор минск малиновка, репетитор минск московский район, репетитор по математике минск малиновка, репетитор по математике минск  московский район, репетитор по математике минск  юго-запад, репетитор по математике брилевичи, репетитор по математике малиновка, репетитор по математике московский район, репетитор по математике юго-запад" name="keywords">
 	<meta content="af875abcb7bc85a1" name="yandex-verification">
 	<link href="style.css" rel="stylesheet" type="text/css">
+	<link href="style-new.css" rel="stylesheet" type="text/css">
 	<link REL="SHORTCUT ICON" HREF="favicon.ico">
 	<style>
 	                /* .imaged{
@@ -146,35 +147,40 @@
 		<div class="clear"></div>
 	</div>
 	<div class="left">
-		<div class="menu_vmel">
+		<div class="menu_desktop">
 			<div class="menu">
 				<a class="blink" href="index.html">Главная страница</a><br>
 				<a class="blink" href="about.html">Информация о репетиторе</a><br>
 				<a class="blink" href="otzivi.html">Отзывы и комментарии</a><br>
 				<a class="blink" href="mestopolozhenie.html">Местоположение и контакты</a><br>
-				<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ по математике</a><br>
-				<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика для студентов</a><br>
-				<a class="blink" href="shkolnikam.html">Математика для школьников</a><br>
-				<a class="blink" href="texraboti.html">Математика для взрослых</a><br>
-				<a class="blink" href="pomosch_reshenii_zadach.html">Онлайн репетитор по математике</a><br>
-				<a class="blink" href="metodika_prepodavania.html">Подготовка в лицей, колледж</a><br>
-				<a class="blink" href="texraboti.html">Репетитор по русскому языку</a><br>
-			</div>
-		</div>
-		<div class="menu_vbig">
-			<div class="menu">
-				<a class="blink" href="index.html">Главная страница</a><br>
-				<a class="blink" href="about.html">Информация о репетиторе</a><br>
-				<a class="blink" href="otzivi.html">Отзывы и комментарии</a><br>
-				<a class="blink" href="mestopolozhenie.html">Местоположение и контакты</a><br>
-				<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ</a><br>
+				<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ и ЦЭ</a><br>
 				<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
 				<a class="blink" href="shkolnikam.html">Математика для школьников</a><br>
-				<a class="blink" href="texraboti.html">Математика для взрослых</a><br>
+				<a class="blink" href="mathematics-for-professionals.html">Математика для взрослых</a><br>
 				<a class="blink" href="pomosch_reshenii_zadach.html">Онлайн репетитор</a><br>
-				<a class="blink" href="metodika_prepodavania.html">Подготовка в лицей, колледж</a><br>
-				<a class="blink" href="texraboti.html">Репетитор по русскому языку</a><br>
+				<a class="blink" href="metodika_prepodavania.html">Подготовка в лицеи</a><br>
+				<a class="blink" href="russian-language-tutor.html">Репетитор по русскому языку</a><br>
 			</div>
+		</div>
+		<div class="menu_mobile">
+			<details>
+				<summary style="font-size:xx-large; color:white;background-color: dimgray;">
+					Меню сайта
+				</summary>
+				<div class="menu">
+					<a class="blink" href="index.html">Главная страница</a><br>
+					<a class="blink" href="about.html">Информация о репетиторе</a><br>
+					<a class="blink" href="otzivi.html">Отзывы и комментарии</a><br>
+					<a class="blink" href="mestopolozhenie.html">Местоположение и контакты</a><br>
+					<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ и ЦЭ</a><br>
+					<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
+					<a class="blink" href="shkolnikam.html">Математика для школьников</a><br>
+					<a class="blink" href="mathematics-for-professionals.html">Математика для взрослых</a><br>
+					<a class="blink" href="pomosch_reshenii_zadach.html">Онлайн репетитор</a><br>
+					<a class="blink" href="metodika_prepodavania.html">Подготовка в лицеи</a><br>
+					<a class="blink" href="russian-language-tutor.html">Репетитор по русскому языку</a><br>
+				</div>
+			</details>
 		</div>
 		<div class="fon">
 			<div class="foncall">
