--- a/russian-language-tutor.html
+++ b/russian-language-tutor.html
@@ -10,6 +10,7 @@
 		<meta name="keywords" content="Репетитор по русскому, репетитор по русскому языку, репетитор русский класс, репетитор по русскому 9 класс, репетитор по русскому языку 9, репетитор по русскому языку 9 класс, подготовка к цт по русскому, подготовка к цт по русскому языку, репетитор по цт русский язык, репетитор по русскому языку подготовка к цт, репетитор по русскому минск, репетитор по русскому языку в минске, подготовка к цэ русский, подготовка к цт по русскому языку, русский язык подготовка к централизованному тестированию, репетитор по белорусскому, репетитор по белорусскому языку, репетитор по белорусскому языку в минске">
 		<meta name="yandex-verification" content="af875abcb7bc85a1">
 		<link href="style.css" rel="stylesheet" type="text/css">
+		<link href="style-new.css" rel="stylesheet" type="text/css">
 		<link REL="SHORTCUT ICON" HREF="favicon.ico">
 		<style>
 			.glf1, .glf2 {
@@ -46,35 +47,40 @@
 			</div>
 		</div>
 		<div class="left">
-			<div class="menu_vmel">
+			<div class="menu_desktop">
 				<div class="menu">
 					<a class="blink" href="index.html">Главная страница</a><br>
 					<a class="blink" href="about.html">Информация о репетиторе</a><br>
 					<a class="blink" href="otzivi.html">Отзывы и комментарии</a><br>
 					<a class="blink" href="mestopolozhenie.html">Местоположение и контакты</a><br>
-					<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ по математике</a><br>
-					<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика для студентов</a><br>
-					<a class="blink" href="shkolnikam.html">Математика для школьников</a><br>
-					<a class="blink" href="texraboti.html">Математика для взрослых</a><br>
-					<a class="blink" href="pomosch_reshenii_zadach.html">Онлайн репетитор по математике</a><br>
-					<a class="blink" href="metodika_prepodavania.html">Подготовка в лицей, колледж</a><br>
-					<a class="blink" href="texraboti.html">Репетитор по русскому языку</a><br>
-				</div>
-			</div>
-			<div class="menu_vbig">
-				<div class="menu">
-					<a class="blink" href="index.html">Главная страница</a><br>
-					<a class="blink" href="about.html">Информация о репетиторе</a><br>
-					<a class="blink" href="otzivi.html">Отзывы и комментарии</a><br>
-					<a class="blink" href="mestopolozhenie.html">Местоположение и контакты</a><br>
-					<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ</a><br>
+					<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ и ЦЭ</a><br>
 					<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
 					<a class="blink" href="shkolnikam.html">Математика для школьников</a><br>
-					<a class="blink" href="texraboti.html">Математика для взрослых</a><br>
+					<a class="blink" href="mathematics-for-professionals.html">Математика для взрослых</a><br>
 					<a class="blink" href="pomosch_reshenii_zadach.html">Онлайн репетитор</a><br>
-					<a class="blink" href="metodika_prepodavania.html">Подготовка в лицей, колледж</a><br>
-					<a class="blink" href="texraboti.html">Репетитор по русскому языку</a><br>
+					<a class="blink" href="metodika_prepodavania.html">Подготовка в лицеи</a><br>
+					<a class="blink" href="russian-language-tutor.html">Репетитор по русскому языку</a><br>
 				</div>
+			</div>
+			<div class="menu_mobile">
+				<details>
+					<summary style="font-size:xx-large; color:white;background-color: dimgray;">
+						Меню сайта
+					</summary>
+					<div class="menu">
+						<a class="blink" href="index.html">Главная страница</a><br>
+						<a class="blink" href="about.html">Информация о репетиторе</a><br>
+						<a class="blink" href="otzivi.html">Отзывы и комментарии</a><br>
+						<a class="blink" href="mestopolozhenie.html">Местоположение и контакты</a><br>
+						<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ и ЦЭ</a><br>
+						<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
+						<a class="blink" href="shkolnikam.html">Математика для школьников</a><br>
+						<a class="blink" href="mathematics-for-professionals.html">Математика для взрослых</a><br>
+						<a class="blink" href="pomosch_reshenii_zadach.html">Онлайн репетитор</a><br>
+						<a class="blink" href="metodika_prepodavania.html">Подготовка в лицеи</a><br>
+						<a class="blink" href="russian-language-tutor.html">Репетитор по русскому языку</a><br>
+					</div>
+				</details>
 			</div>
 			<div class="fon">
 				<div class="foncall">
