--- a/otzivi.html
+++ b/otzivi.html
@@ -8,27 +8,9 @@
 	<meta content="репетитор по математике, репетитор по математике Минск, репетиторы отзывы, хорошие отзывы о репетиторе, отзывы о репетиторах по математике, хороший репетитор, хороший репетитор по математике, лучший сайт репетиторов, как найти хорошего репетитора, самые лучшие репетиторы, репетитор по высшей математике Минск" name="keywords">
 	<meta content="af875abcb7bc85a1" name="yandex-verification">
 	<link href="style.css" rel="stylesheet" type="text/css">
+	<link href="style-new.css" rel="stylesheet" type="text/css">
 	<link REL="SHORTCUT ICON" HREF="favicon.ico">
 	<style>
-		.menu_desktop {
-			display:block;
-		}
-		
-		.menu_mobile {
-			display:none;
-		}
-		
-		@media screen and (max-width:800px){
-			.menu_desktop {
-				display:none;
-			}
-			.menu_mobile {
-				display:block;
-			}
-			
-		}
-
-
 	             /* .imaged{
 	                  padding-left: 90px;
 	              }*/
@@ -206,14 +188,8 @@
 				<img src="./images/advantages/velcom.jpg"><a href="tel:+375296575971">+375(29)657-59-71</a><br>
 				<img src="./images/advantages/vib.png"><a href="tel:+375172400021">+375(17)240-00-21</a>
 			</div>
-			
-			
-			<div align="center"><br>
-<iframe src="https://yandex.by/sprav/widget/rating-badge/1373635637?type=rating" width="150" height="50" frameborder="0"></iframe></div>
-
 			<div class="otz">
-			<span class="otz0"><a href="otzivi.html">Отзывы о репетиторе >></a></span>
-				<div class="ot0">
+			<div class="ot0">
 					<a href="otzivi.html#denis"><div class="ot1">
 						<img src="./images/advantages/1-62.png">
 					</div></a>
@@ -316,8 +292,36 @@
 			<div class="right">
 			<span class="skr"><a href="texraboti.html">Отзывы о репетиторе с комментариями</a></span>
 			<span class="otz01"><a href="otzivi.html#kovalenko">Ещё отзывы о репетиторе по математике >></a></span>
-				<p><a class="blink" href="https://www.google.ru/maps/place/%D0%A0%D0%B5%D0%BF%D0%B5%D1%82%D0%B8%D1%82%D0%BE%D1%80+%D0%BF%D0%BE+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5+%D0%B8+%D0%B2%D1%8B%D1%81%D1%88%D0%B5%D0%B9+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5/@53.8441701,27.4731643,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1" target="_blank">Отзывы в Google</a>:<br>
-				<a class="imagelink" href="https://www.google.ru/maps/place/%D0%A0%D0%B5%D0%BF%D0%B5%D1%82%D0%B8%D1%82%D0%BE%D1%80+%D0%BF%D0%BE+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5+%D0%B8+%D0%B2%D1%8B%D1%81%D1%88%D0%B5%D0%B9+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5/@53.8441701,27.4731643,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1" target="_blank"><img src="images/outlogo/google.png"></a></p>
+			<div class="portal-raitings">
+				<p style="margin-left: 5px; margin-top: 15px; color: dimgray;">
+					Отзывы и рейтинг <br> репетитора <br> по математике <br> на интернет-порталах:<br>
+				</p>
+				<p>
+					<a class="imagelink" 
+						href="https://www.google.ru/maps/place/%D0%A0%D0%B5%D0%BF%D0%B5%D1%82%D0%B8%D1%82%D0%BE%D1%80+%D0%BF%D0%BE+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5+%D0%B8+%D0%B2%D1%8B%D1%81%D1%88%D0%B5%D0%B9+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5/@53.8441701,27.4731643,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1"
+						target="_blank">
+						<img class="img-service-rating" src="images/outlogo/google-rating.png" alt="Отзывы и рейтинг репетитора по математике в Google">
+					</a>
+					<br>
+					<a class="imagelink" 
+						href="https://yandex.by/maps/org/repetitor_po_matematike_i_vysshey_matematike_ignatyev_igor_viktorovich/1373635637/reviews/"
+						target="_blank">
+						<img class="img-service-rating" src="images/outlogo/yandex-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс">
+					</a>
+					<br>
+					<a class="imagelink" 
+						href="https://uslugi.yandex.ru/profile/IgorViktorovichIgnatev-199845"
+						target="_blank">
+						<img class="img-service-rating" src="images/outlogo/yandex-service-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс.Услуги">
+					</a>
+					<br>
+					<a class="imagelink" 
+						href="https://zoon.by/minsk/p-repetitor/igor_viktorovich_ignatev/"
+						target="_blank">
+						<img class="img-service-rating" src="images/outlogo/zoon-rating.png" alt="Отзывы и рейтинг репетитора по математике в Zoon">
+					</a>
+				</p>
+			</div>
 				<!-- p><a class="blink" href="https://mathematics-by.tam.by/otzyvy/" target="_blank">Отзывы на Tam.by</a>:<br>
 				<a class="imagelink" href="https://mathematics-by.tam.by/otzyvy/" target="_blank"><img src="images/outlogo/tamby.png"></a></p-->
 				<div class="n1"><img src="./images/background/mm.png"></div>
@@ -340,8 +344,9 @@
 					<div class="n1"><img src="./images/background/mm.png"></div>
 					<div class="n1"><img src="./images/background/mm.png"></div>
 					<div class="n1"><img src="./images/background/mm.png"></div>
+					<!--
 					<div class="n1"><img src="./images/background/mm.png"></div>
-					
+					-->
 				</div>
 			</div>
 		</div>
@@ -852,17 +857,45 @@
 	</div>
 	</div>
 
-
-
-
-
 	<div class="clear"></div>
-	<div style="margin-top: 2%;" class="knfooter">
-		<a href="#"><div class="knf1">ЕЩЁ ОТЗЫВЫ</div></a>
-		<a href="cabinet.html"><div class="knf1">ЗАЛ ДЛЯ ЗАНЯТИЙ</div></a>
-		<!-- a href="https://mathematics-by.tam.by/otzyvy/"><div class="knf1">ОТЗЫВЫ НА TAM.BY</div></a -->
-		<a href="https://www.google.ru/maps/place/Репетитор+по+математике+и+высшей+математике/@53.8441701,27.4731643,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1"><div class="knf1">ОТЗЫВЫ В GOOGLE</div></a>
+	<div class="right1">
+		<div class="portal-raitings">
+			<p style="margin-left: 5px; margin-top: 15px; color: dimgray;">
+				Отзывы и рейтинг <br> репетитора <br> по математике <br> на интернет-порталах:<br>
+			</p>
+			<p>
+				<a class="imagelink" 
+					href="https://www.google.ru/maps/place/%D0%A0%D0%B5%D0%BF%D0%B5%D1%82%D0%B8%D1%82%D0%BE%D1%80+%D0%BF%D0%BE+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5+%D0%B8+%D0%B2%D1%8B%D1%81%D1%88%D0%B5%D0%B9+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5/@53.8441701,27.4731643,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1"
+					target="_blank">
+					<img class="img-service-rating" src="images/outlogo/google-rating.png" alt="Отзывы и рейтинг репетитора по математике в Google">
+				</a>
+				<br>
+				<a class="imagelink" 
+					href="https://yandex.by/maps/org/repetitor_po_matematike_i_vysshey_matematike_ignatyev_igor_viktorovich/1373635637/reviews/"
+					target="_blank">
+					<img class="img-service-rating" src="images/outlogo/yandex-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс">
+				</a>
+				<br>
+				<a class="imagelink" 
+					href="https://uslugi.yandex.ru/profile/IgorViktorovichIgnatev-199845"
+					target="_blank">
+					<img class="img-service-rating" src="images/outlogo/yandex-service-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс.Услуги">
+				</a>
+				<br>
+				<a class="imagelink" 
+					href="https://zoon.by/minsk/p-repetitor/igor_viktorovich_ignatev/"
+					target="_blank">
+					<img class="img-service-rating" src="images/outlogo/zoon-rating.png" alt="Отзывы и рейтинг репетитора по математике в Zoon">
+				</a>
+			</p>
+		</div>
 	</div>
+		
+	<div class="no">
+		<img src="./images/cat/cat.gif"
+			alt="tech">
+	</div>
+
 	<div id="footer">
 		<div class="fot">
 			<div class="glf">
