M-98. All pages exept of russian-language-tutor.html that has a different footer.

--- a/index.html
+++ b/index.html
@@ -920,7 +920,7 @@
 			</div>
 			<div class="glf4">
 				<img src="./images/advantages/maps.png"> <a href="mestopolozhenie.html#karta">Проспект Дзержинского, 131</a><br>
-				<img src="./images/advantages/metro.png"> <a href="mestopolozhenie.html#karta">(ст.м. Малиновка)</a><br>
+				<img src="./images/advantages/metro.png"> <a href="mestopolozhenie.html#karta">ст.м. Малиновка</a><br>
 				<img src="./images/advantages/posts.png"> <a href="mailto:info@mathematics.by">info@mathematics.by</a>
 			</div>
 			<div class="glf5">
