--- a/podgotovka_k_ekzamenu.html
+++ b/podgotovka_k_ekzamenu.html
@@ -423,81 +423,36 @@
 			alt="tech">
 	</div>
 
-	<div id="footer">
-		<div class="fot">
-			<div class="glf">
-				<div class="glf1">
-					<img src="./images/advantages/viber.png"> <a style="text-decoration: none;" href="viber://add?number=375296575971">+375(29)657-59-71</a><br>
-					<img src="./images/advantages/telegram.png"><a style="text-decoration: none;" href="tg://resolve?domain=mathematicsby">+375(29)851-52-51</a><br>
-					<img src="./images/advantages/whatts.png"> <a style="text-decoration: none;" href="whatsapp://send?text=Hello&phone=+375296575971&abid=+375296575971">+375(29)657-59-71</a>
-				</div>
-				<div class="glf2">
-					<img src="./images/advantages/mtts.png"> <a style="text-decoration: none;" href="tel:+375298515251">+375(29)851-52-51</a><br>
-					<img src="./images/advantages/velccom.png"> <a style="text-decoration: none;" href="tel:+375296575971">+375(29)657-59-71</a><br>
-					<img src="./images/advantages/skype.png"> <a href="skype:xoziain_777?chat”">(по запросу)</a> 
-				</div>
-				<div class="glf3">
-					<img src="./images/advantages/posts.png"> <a href="mailto:info@mathematics.by">info@mathematics.by</a><br>
-					<img src="./images/advantages/calls.png"> <a style="text-decoration: none;" href="tel:+375172400021">+375(17)240-00-21</a>
-				</div>
-				<div class="glf4">
-					<img  src="./images/advantages/maps.png"> <a href="mestopolozhenie.html#karta">Проспект Дзержинского, 131</a><br>
-					<img src="./images/advantages/metro.png"> <a href="mestopolozhenie.html#karta">(ст.м. Малиновка)</a>
-				</div>
-				<div class="glf5">
-					<img src="./images/cat/cat1.png">
-				</div>
-				<div class="clear">
-				</div>
+<div id="footer">
+	<div class="fot">
+		<div class="glf">
+			<div class="glf1">
+				<img src="./images/advantages/mtts.png"> <a style="text-decoration: none;" href="tel:+375298515251">+375(29)851-52-51</a><br>
+				<img src="./images/advantages/velccom.png"> <a style="text-decoration: none;" href="tel:+375296575971">+375(29)657-59-71</a><br>
+				<img src="./images/advantages/calls.png"> <a style="text-decoration: none;" href="tel:+375172400021">+375(17)240-00-21</a>
 			</div>
-			<div class="glf0">
-				<div class="glf1">
-					<img src="./images/advantages/viber.png"> <a style="text-decoration: none;" href="viber://add?number=375296575971">+375(29)657-59-71</a><br>
-					<img src="./images/advantages/telegram.png"><a style="text-decoration: none;" href="tg://resolve?domain=mathematicsby">+375(29)851-52-51</a><br>
-					<img src="./images/advantages/whatts.png"> <a style="text-decoration: none;" href="whatsapp://send?text=Hello&phone=+375296575971&abid=+375296575971">+375(29)657-59-71</a>
-				</div>
-				<div class="glf2">
-					<img src="./images/advantages/mtts.png"> <a style="text-decoration: none;" href="tel:+375298515251">+375(29)851-52-51</a><br>
-					<img src="./images/advantages/velccom.png"> <a style="text-decoration: none;" href="tel:+375296575971">+375(29)657-59-71</a><br>
-					<img src="./images/advantages/skype.png"> <a href="skype:xoziain_777?chat”">(по запросу)</a> 
-				</div>
-				<div class="glf3">
-					<img src="./images/advantages/posts.png"> <a href="mailto:info@mathematics.by">info@mathematics.by</a><br>
-					<img src="./images/advantages/calls.png"> <a style="text-decoration: none;" href="tel:+375172400021">+375(17)240-00-21</a>
-				</div>
-				<div class="glf4">
-					<img  src="./images/advantages/maps.png"> <a href="mestopolozhenie.html#karta">Проспект Дзержинского, 131</a><br>
-					<img src="./images/advantages/metro.png"> <a href="mestopolozhenie.html#karta">(ст.м. Малиновка)</a>
-				</div>
-				<div class="glf5">
-					<img src="./images/cat/cat1.png">
-				</div>
-				<div class="clear">
-				</div>
+			<div class="glf2">
+				<img src="./images/advantages/viber.png"> <a style="text-decoration: none;" href="viber://add?number=375296575971">+375(29)657-59-71</a><br>
+				<img src="./images/advantages/telegram.png"><a style="text-decoration: none;" href="tg://resolve?domain=mathematicsby">+375(29)851-52-51</a><br>
+				<img src="./images/advantages/whatts.png"> <a style="text-decoration: none;" href="whatsapp://send?text=Hello&phone=+375296575971&abid=+375296575971">+375(29)657-59-71</a>
 			</div>
-			<div class="glf9">
-				<div class="glf1">
-					<img src="./images/advantages/viber.png"> <a style="text-decoration: none;" href="viber://add?number=375296575971">+375(29)657-59-71</a><br>
-					<img src="./images/advantages/telegram.png"> <a style="text-decoration: none;" href="tg://resolve?domain=mathematicsby">+375(29)851-52-51</a><br>
-					<img src="./images/advantages/whatts.png"> <a style="text-decoration: none;" href="whatsapp://send?text=Hello&phone=+375296575971&abid=+375296575971">+375(29)657-59-71</a>
-				</div>
-				<div class="glf2">
-					<img src="./images/advantages/mtts.png"> <a style="text-decoration: none;" href="tel:+375298515251">+375(29)851-52-51</a><br>
-					<img src="./images/advantages/velccom.png"> <a style="text-decoration: none;" href="tel:+375296575971">+375(29)657-59-71</a><br>
-					<img src="./images/advantages/skype.png"> <a href="skype:xoziain_777?chat”">(по запросу)</a> 
-				</div>
-				<div class="glf3">
-					<img src="./images/advantages/posts.png"> <a href="mailto:info@mathematics.by">info@mathematics.by</a><br>
-					<img src="./images/advantages/calls.png"> <a style="text-decoration: none;" href="tel:+375172400021">+375(17)240-00-21</a>
-				</div>
-				<div class="glf4">
-					<img  src="./images/advantages/maps.png"> <a href="mestopolozhenie.html#karta">Проспект Дзержинского, 131</a><br>
-					<img src="./images/advantages/metro.png"> <a href="mestopolozhenie.html#karta">(ст.м. Малиновка)</a>
-				</div>
-				<div class="clear">
-				</div>
+			<div class="glf3">
+				<img src="./images/advantages/world-map.png"> <a href="site_map.html">Карта сайта</a><br>
+				<img src="./images/advantages/youtube.png"> <a href="https://www.youtube.com/@mathematics_by">YouTube</a><br>
+				<img src="./images/advantages/skype.png"> <a href="skype:xoziain_777?chat">Skype</a> 
 			</div>
-			<div class="rt">
+			<div class="glf4">
+				<img src="./images/advantages/maps.png"> <a href="mestopolozhenie.html#karta">Проспект Дзержинского, 131</a><br>
+				<img src="./images/advantages/metro.png"> <a href="mestopolozhenie.html#karta">ст.м. Малиновка</a><br>
+				<img src="./images/advantages/posts.png"> <a href="mailto:info@mathematics.by">info@mathematics.by</a>
+			</div>
+			<div class="glf5">
+				<img src="./images/cat/cat1.png">
+			</div>
+			<div class="clear">
+			</div>
+		</div>
+		<div class="rt">
 				<script>
 					document.write("<a href='//www.liveinternet.ru/click' "+
 					"target=_blank><img src='//counter.yadro.ru/hit?t22.11;r"+
