M-156. Corrected missed hyperlink on main page.

--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
 						языкам здесь же.<br>
 					<a style="font-family:akrobat-regular;
 						color: rgb(140, 140, 140);" 
-						href="texraboti.html">
+						href="russian-language-tutor.html">
 							Подробнее о репетиторе по русскому языку
 					</a>
 				</div>
@@ -774,7 +774,7 @@
 					font-family:akrobat-regular;
 					color: rgb(140, 140, 140);
 				"
-				href="texraboti.html">
+				href="russian-language-tutor.html">
 					Подробнее о репетиторе по русскому языку
 			</a>
 		</div>
