--- a/podgotovka_k_ekzamenu.html
+++ b/podgotovka_k_ekzamenu.html
@@ -347,13 +347,13 @@
 				2. Предложение:
 			</p>
 			<p class="zgt">
-				- индивидуальные занятия, продолжительность от 2-х (90 минут) до 3-х (135 минут) академических часов, стоимость от 10 до 12,5 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час.
+				- индивидуальные занятия, продолжительность от 2-х (90 минут) до 3-х (135 минут) академических часов, стоимость 17,5 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час.
 			</p>
 			<p class="zgt">
-				- занятия в паре, продолжительность от 2-х (90 минут) до 3-х (135 минут) академических часов, стоимость 10 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час.
+				- занятия в паре, продолжительность от 2-х (90 минут) до 3-х (135 минут) академических часов, стоимость 15 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час.
 			</p>
 			<p class="zgt">
-				- занятия в мини группах, продолжительность от 2-х (90 минут) до 3 (135 минут) академических часа, стоимость от 7,5 до 10 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час. В группе 3-5 человек.
+				- занятия в мини группах, продолжительность от 2-х (90 минут) до 3 (135 минут) академических часа, стоимость 12,5 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час. В группе 3-6 человек.
 			</p>
 			<p class="zgt">
 				- количество занятий: 1-2 раза в неделю (90-135-180 минут). При ограничении во времени частоту занятий желательно  увеличить.
