--- a/pomosch_reshenii_zadach.html
+++ b/pomosch_reshenii_zadach.html
@@ -342,13 +342,13 @@
 					2. Предложение:
 				</p>
 				<p class="zgt">
-					- индивидуальные занятия, продолжительность от 2-х (90 минут) до 3-х (135 минут) академических часов, стоимость 12,5 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час.
+					- индивидуальные занятия, продолжительность от 2-х (90 минут) до 3-х (135 минут) академических часов, стоимость 15 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час.
 				</p>
 				<p class="zgt">
-					- занятия в паре, продолжительность от 2-х (90 минут) до 3-х (135 минут) академических часов, стоимость 10 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час.
+					- занятия в паре, продолжительность от 2-х (90 минут) до 3-х (135 минут) академических часов, стоимость 12,5 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час.
 				</p>
 				<p class="zgt">
-					- занятия в минигруппах, продолжительность от 2-х (90 минут) до 3-х (135 минут) академических часа, стоимость 10 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час. В группе 3-4 человека.
+					- занятия в минигруппах, продолжительность от 2-х (90 минут) до 3-х (135 минут) академических часа, стоимость 10 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час. В группе 3-6 человек.
 				</p>
 				<p class="zgt">
 					3. Иногда требуется помочь студенту дистанционно (например, оказать помощь в решении нескольких задач по мобильному телефону).
