--- a/mathematics-for-professionals.html
+++ b/mathematics-for-professionals.html
@@ -385,9 +385,9 @@
 
 				<h3>Цены на занятия по математике для взрослых:</h3>
 				<ul>
-					<li>стоимость индивидуальных занятий - 17,5 долларов США по курсу продажи в коммерческих банках РБ за один академический час. Минимальная продолжительность - 2 академических часа (90 минут). Стоимость занятия в этом случае составит 35 условных единиц.</li>
-					<li>стоимость занятий в паре - 15 долларов США по курсу продажи в коммерческих банках РБ за один академический час. Минимальная продолжительность - 2 академических часа (90 минут). Стоимость занятия в этом случае составит 30 условных единиц.</li>
-					<li>стоимость занятий в мини-группах - 12,5 долларов США по курсу продажи в коммерческих банках РБ за один академический час. Минимальная продолжительность - 2 академических часа (90 минут). Стоимость занятия в этом случае составит 25 условных единиц. В группе может быть от трёх до пяти человек.</li>
+					<li>стоимость индивидуальных занятий - 20 долларов США по курсу продажи в коммерческих банках РБ за один академический час. Минимальная продолжительность - 2 академических часа (90 минут). Стоимость занятия в этом случае составит 40 условных единиц.</li>
+					<li>стоимость занятий в паре - 17,5 долларов США по курсу продажи в коммерческих банках РБ за один академический час. Минимальная продолжительность - 2 академических часа (90 минут). Стоимость занятия в этом случае составит 35 условных единиц.</li>
+					<li>стоимость занятий в мини-группах - 15 долларов США по курсу продажи в коммерческих банках РБ за один академический час. Минимальная продолжительность - 2 академических часа (90 минут). Стоимость занятия в этом случае составит 30 условных единиц. В группе может быть от трёх до шести человек.</li>
 				</ul>
 				<p class="zgt">
 					Отмечу, что в силу различных поставленных целей и задач, начального уровня знаний, времени начала подготовки по математике, занятия часто проходят в индивидуальном формате.
