--- a/shkolnikam.html
+++ b/shkolnikam.html
@@ -348,16 +348,16 @@
 					4. Условия:
 				</p>
 				<p class="zgt">
-					- индивидуальные занятия, продолжительность 2 (90 минут) академических часа, стоимость от 10 долларов США по курсу продажи в коммерческих банках Беларуси за один академический час.
+					- индивидуальные занятия, продолжительность 2 (90 минут) академических часа, стоимость 15 долларов США по курсу продажи в коммерческих банках Беларуси за один академический час (30 долларов за занятие).
 				</p>
 				<p class="zgt">
-					- занятия в паре, продолжительность 2 (90 минут) академических часа, стоимость 10 долларов США по курсу продажи в коммерческих банках Беларуси за один академический час.
+					- занятия в паре, продолжительность 2 (90 минут) академических часа, стоимость 12,5 долларов США по курсу продажи в коммерческих банках Беларуси за один академический час (25 долларов за занятие).
 				</p>
 				<p class="zgt">
-					- занятия в минигруппах, продолжительность 2 (90 минут) академических часа, стоимость 7,5 долларов США по курсу продажи в коммерческих банках Беларуси за один академический час. В группе 3-4 человека.
+					- занятия в минигруппах, продолжительность 2 (90 минут) академических часа, стоимость 10 долларов США по курсу продажи в коммерческих банках Беларуси за один академический час (20 долларов за занятие). В группе 3-6 человек.
 				</p>
 				<p class="zgt">
-					- количество занятий: 1-2 раза в неделю (90 минут).
+					- количество занятий: 1-2 раза в неделю (по 90 минут).
 				</p>
 				<p class="zgt">
 					Записаться на занятия можно по телефонам:<br>
