--- a/uslovia_i_ceny2.html
+++ b/uslovia_i_ceny2.html
@@ -339,13 +339,13 @@
 					1. Подготовка к ЦТ (для 11 класса, выпускников колледжей и уже получивших среднее образование, продолжительность занятия – 3 академических часа, для остальных-2):
 				</p>
 				<p class="zgt">
-					- индивидуальные занятия, продолжительность 3 (135 минут) академических часа, стоимость от 10 до 11,5 долларов США по курсу продажи в коммерческих банках Беларуси за один академический час.
+					- индивидуальные занятия, продолжительность 3 (135 минут) академических часа, стоимость 15 долларов США по курсу продажи в коммерческих банках Беларуси за один академический час (40-45 долларов за занятие).
 				</p>
 				<p class="zgt">
-					- занятия в паре, продолжительность 3 (135 минут) академических часа, стоимость 10 долларов США по курсу продажи в коммерческих банках Беларуси за один академический час.
+					- занятия в паре, продолжительность 3 (135 минут) академических часа, стоимость 12,5 долларов США по курсу продажи в коммерческих банках Беларуси за один академический час (35-37,5 долларов за занятие).
 				</p>
 				<p class="zgt">
-					- занятия в мини-группах, продолжительность 3 (135 минут) академических часа, стоимость 8 долларов США по курсу продажи в коммерческих банках Беларуси за один академический час. В группе 3-4 человека (не более 5).
+					- занятия в мини-группах, продолжительность 3 (135 минут) академических часа, стоимость 10 долларов США по курсу продажи в коммерческих банках Беларуси за один академический час (30 долларов за занятие). В группе 3-6 человек (не более 7).
 				</p>
 				<p class="zgt">
 					Стабильно хорошие результаты достигаются при любом виде занятий, зачастую лучшие – в парах или мини-группах. Вы экономите свои деньги и мое время. Главное – желание заниматься, быть готовым к преодолению трудностей, то есть целеустремленность и трудолюбие. Не стоит думать, что продолжительность занятия (3 академических часа) велика для вашего ребенка. Помните, что централизованное тестирование по математике продолжается   4 академических часа, 3 из которых абитуриент должен работать с полной нагрузкой, а один час оставить на проверку и решение ранее нерешенных заданий.
@@ -354,19 +354,13 @@
 					2. Подготовка в колледж и к ЦТ (ученики 10-х классов и младше):
 				</p>
 				<p class="zgt">
-					- индивидуальные занятия, продолжительность 2 (90 минут) академических часа, стоимость от 10 до 12,5  долларов США по курсу продажи в коммерческих банках Беларуси за один академический час.
+					- индивидуальные занятия, продолжительность 2 (90 минут) академических часа, стоимость 15  долларов США по курсу продажи в коммерческих банках Беларуси за один академический час (30 долларов за занятие).
 				</p>
 				<p class="zgt">
-					- занятия в паре, продолжительность 2 (90 минут) академических часа, стоимость 10 долларов США по курсу продажи в коммерческих банках Беларуси за один академический час.
+					- занятия в паре, продолжительность 2 (90 минут) академических часа, стоимость 12,5 долларов США по курсу продажи в коммерческих банках Беларуси за один академический час (25 долларов за занятие).
 				</p>
 				<p class="zgt">
-					- занятия в мини-группах, продолжительность 2 (90 минут) академических часа, стоимость 7,5 долларов США по курсу продажи в коммерческих банках Беларуси за один академический час. В группе 3-4 человека.
-				</p>
-				<p class="zgt">
-					3. Подготовка к ЦТ и в колледж по русскому, белорусскому языкам:
-				</p>
-				<p class="zgt">
-					- индивидуальные занятия и занятия в паре, продолжительность 2 (90 минут) академических часа, стоимость от 7,5 (в паре) до 10 (индивидуально) долларов США по курсу продажи в коммерческих банках Беларуси за один академический час.
+					- занятия в мини-группах, продолжительность 2 (90 минут) академических часа, стоимость 10 долларов США по курсу продажи в коммерческих банках Беларуси за один академический час (20 долларов за занятие).
 				</p>
 			</div>
 		<div class="clear"></div>
