M-160. Updated photos and links to videos at the main page.

--- a/index.html
+++ b/index.html
@@ -366,10 +366,10 @@
 			</div>
 			<p></p> 
 			<div class="ck"> 
-				<a href="https://youtu.be/EYH5g5kS_xg" target="_blank">
+				<a href="https://www.youtube.com/watch?v=cCTXrA1IR2w" target="_blank">
 					<img alt="Репетитор по математике в Минске"
 						class="image1"  
-						src="images/photo/mathematics_tutor.jpg" 
+						src="images/photo/results-2024.jpg" 
 						title="Репетитор по математике в Минске"></a>
 				<!-- </a> При наличии tab-ов или даже переноса строки - добавляет между фото фиолетовую ссылку длиной в пробел -->
 				<a href="https://youtu.be/n_nD7EeA1Wc" target="_blank">
