M-162. Added images block to uslovia_i_ceny2.html

--- a/uslovia_i_ceny2.html
+++ b/uslovia_i_ceny2.html
@@ -333,7 +333,20 @@
 			<h2 class="main"> 
 				<span class="h21">Условия и цены</span>
 			</h2>
-
+			<div class="ck">
+				<a href="https://www.youtube.com/watch?v=cCTXrA1IR2w" target="_blank">
+					<img alt="Репетитор по математике в Минске"
+						class="image1"  
+						src="images/photo/results-2024.jpg" 
+						title="Репетитор по математике в Минске"></a>
+				<!-- </a> При наличии tab-ов или даже переноса строки - добавляет между фото фиолетовую ссылку длиной в пробел -->
+				<a href="https://www.youtube.com/watch?v=EYH5g5kS_xg" target="_blank">
+					<img alt="Занятия по математике в группах"
+						class="image" 
+						src="images/photo/results-2023.jpg" 
+						title="Занятия по математике в группах">
+				</a>
+			</div>
 			<div id="realmain" class="zgt">
 				<p class="zgt">
 					1. Подготовка к ЦТ (для 11 класса, выпускников колледжей и уже получивших среднее образование, продолжительность занятия – 3 академических часа, для остальных-2):
