M-161. Added images block with new images to about.html.

--- a/about.html
+++ b/about.html
@@ -333,7 +333,16 @@
 			<h2 class="main"> 
 				<span class="h21">Обо мне</span>
 			</h2>
-
+			<div class="ck"> 
+					<img alt="Репетитор по математике в Минске"
+						class="image1"  
+						src="images/photo/about-tutor-1.jpg" 
+						title="Репетитор по математике в Минске">
+					<img alt="Занятия по математике в группах"
+						class="image" 
+						src="images/photo/about-tutor-2.jpg" 
+						title="Репетитор по математике в Минске">
+			</div>
 			<div id="realmain" class="zgt">
 				<p class="zgt">
 					1. Два высших образования БГУ (математическое и экономическое), кандидат физико-математических наук, многолетний опыт работы (с 1996 года) в гимназии (классы с базовым, повышенным и углубленным обучением, победители районных и городских олимпиад), в ВУЗе (подготовительные курсы, высшая математика, ТВ и МС, математическое программирование) и, конечно, в частных занятиях.
