M-173. Changed tutor.jpg to results-2018.jpg and updated html files.

--- a/otzivi.html
+++ b/otzivi.html
@@ -440,7 +440,7 @@
 				<a href="https://youtu.be/n_nD7EeA1Wc" target="_blank">
 					<img alt="Занятия по математике в группах"
 						class="image" 
-						src="images/photo/tutor.jpg" 
+						src="images/photo/results-2018.jpg" 
 						title="Занятия по математике в группах">
 				</a>
 			</div>
