--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 				<a href="https://youtu.be/n_nD7EeA1Wc" target="_blank">
 					<img alt="Занятия по математике в группах"
 						class="image" 
-						src="images/photo/tutor.jpg" 
+						src="images/photo/results-2018.jpg" 
 						title="Занятия по математике в группах">
 				</a>
 			</div>
