M-172. Important pages updated.

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 				</span>
 				</span>
 				<span class="p1">
-					<a href="metodika_prepodavania.html">
+					<a href="uslovia_i_ceny2.html">
 					Подробная информация о подготовке к ЦТ
 					</a>
 					<span class="strelki">&gt;&gt;</span></span>
