--- a/metodika_prepodavania.html
+++ b/metodika_prepodavania.html
@@ -31,11 +31,15 @@
 				 	alt="tech">
 			</div>
 			<div class="g2">
-			<h1>Методика преподавания</h1>
+			<h1>Подготовка к ЦТ и ЦЭ по математике, цены, Минск, Беларусь</h1>
 			<span class="zs">  
-				подготовка к ЦТ, подготовка в колледж
+				Подготовка по математике в вузы РФ и вузы Европы очно и онлайн.
+                Подготовка к ЦТ и ЦЭ по русскому языку, Минск
+
+
 			</span>
 			</div>
+		
 			<div class="g3">
 				<img src="images/cat/1.png" alt="tech">
 			</div>
@@ -329,82 +333,194 @@
 					<a href="otzivi.html">Отзывы о репетиторе с комментариями</a>
 				</span>
 			</div>
-
+            <div class="kn">
+		    <a target="_blank" href="uslovia_i_ceny2.html"><div class="kn1">
+			Подготовка к ЦТ и ЦЭ
+		    </div></a>
+		    <a target="_blank" href="russian-language-tutor.html"><div class="kn2">
+			Русский язык
+		    </div></a>
+		    <a href="shkolnikam.html"><div class="kn3">
+			Репетитор 10-й класс
+		    </div></a>
+		    <a href="cabinet.html"><div class="kn4">
+			Рабочий кабинет
+		   </div></a>
+	    </div><br>
+		<h2 class="main"> 
+			<span class="h21">Программу подготовки к ЦТ по математике можно условно разделить на 3 этапа:</span>
+		</h2>
+		<br>
+		<h2 class="main"> 
+			<span class="h21">1 этап</span>
+		</h2>
+		<div id="realmain" class="zgt">
+				<p class="zgt">
+					- <span class="roztx">решение заданий ЦТ, ЦЭ, РТ, ДРТ, РЦЭ, а также авторских заданий  </span> по разделам за курс базовой школы (5-9 классы)
+				</p>
+				<p class="zgt">
+					- <span class="roztx">овладение полной теоретической базой и практическими навыками </span>
+					за период обучения на 2-й ступени общего среднего образования согласно  <span class="roztx">программе ЦТ и ЦЭ по математике</span>.
+				</p>
+				<p class="zgt">
+					- решение неполных вариантов РТ, ЦТ и авторских вариантов (исключая материал 10-11 классов) прошлых лет 
+				</p>
+		</div>
+		<h2 class="main"> 
+			<span class="h21">2 этап</span>
+		</h2>
+		<div id="realmain" class="zgt">
+				<p class="zgt">
+					- решение тестовых задач по разделам <span class="roztx">за курс старшей школы </span> (10-11 классы)
+				</p>
+				<p class="zgt">
+					- овладение полной теоретической базой 10-11 классов</span>.
+				</p>
+				<p class="zgt">
+					- решение неполных вариантов ЦТ и ЦЭ <span class="roztx">(материал 10-11 классов)</span> прошлых лет 
+				</p>
+		</div>
+		<h2 class="main"> 
+			<span class="h21">3 этап</span>
+		</h2>
+		<div id="realmain" class="zgt">
+				<p class="zgt">
+					- решение <span class="roztx">полных вариантов ЦТ, ЦЭ, РТ, ДРТ, РЦЭ</span> прошлых лет
+				</p>
+				<p class="zgt">
+					- <span class="roztx">итоговое закрепление </span> пройденного материала. 
+				</p>
+		</div>
+			<div class="ck">
+					<img 
+						alt="Репетитор по математике в Минске"
+						 class="image1"  
+						 src="images/photo/ph1.jpg" 
+						 title="Репетитор по математике в Минске"></a>
+				<!-- </a> При наличии tab-ов или даже переноса строки - добавляет между фото фиолетовую ссылку длиной в пробел -->
+					<img 				     
+						 alt="Занятия по математике в группах"
+						 class="image" 
+						 src="images/photo/ph2.jpg" 
+						 title="Занятия по математике в группах">
+				</a>
+			</div>
 			<h2 class="main"> 
-				<span class="h21">Методика преподавания</span>
-			</h2>
-
+			<span class="h21">Условия и цены</span>
+		    </h2>
+			<ol>
+			<li><div id="realmain" class="zgt">
+				<p class="zgt">
+					<span class="zg">Подготовка к ЦТ и ЦЭ для 11 класса</span>, выпускников колледжей и уже получивших среднее образование.
+					<span class="roztx">Продолжительность занятия – 3 академических часа</span>:
+				</p>
+				<p class="zgt">
+					- <span class="roztx">индивидуальные занятия</span>, продолжительность 3 (135 минут) академических часа,
+					стоимость от 13 до 15 долларов США по курсу продажи в коммерческих банках РБ
+					за один академический час (40-45 долларов за занятие).
+				</p>
+				<p class="zgt">
+					- <span class="roztx">занятия в паре</span>, продолжительность 3 (135 минут) академических часа,
+					стоимость от 11,5 до 12,5 долларов США по курсу продажи в коммерческих банках РБ
+					за один академический час (35-37,5 долларов за занятие) 
+				</p>
+				<p class="zgt">
+					- <span class="roztx">занятия в мини-группах</span>, продолжительность 3 (135 минут) академических часа,
+					стоимость 10 долларов США по курсу продажи в коммерческих банках РБ за один
+					академический час (30 долларов за занятие). В группе от 3 до 7 человек  
+				</p>
+				<p class="zgt">
+					Стабильно отличные и хорошие результаты достигаются при любом виде занятий,
+					<span class="roztx">зачастую лучшие – в мини-группах</span>. Группы строго ранжируются <span class="roztx">по уровню знаний
+					и количеству учащихся</span>. Главное – желание заниматься и быть готовым к
+					преодолению трудностей, то есть целеустремленность и трудолюбие. Формат
+					занятия определяю я сам в зависимости от многих факторов. Не стоит думать,
+					что продолжительность занятия (135 минут) велика для вашего ребенка. Помните,
+					что <span class="roztx">ЦТ и ЦЭ по математике продолжается 210 минут</span>, 135 из которых абитуриент
+					должен работать с полной нагрузкой, а оставшееся время уделить <span class="roztx">дополнительной
+					проверке</span> и решению невыполненных заданий, если такие остались.
+				</p>
+		</div></li>
+			<li><div id="realmain" class="zgt">
+				<p class="zgt">
+					<span class="zg">Подготовка к ЦЭ и ЦТ (ученики 10-х классов и младше).</span>
+					<span class="roztx">Продолжительность занятия – 2 академических часа</span>:
+				</p>
+				<p class="zgt">
+					- <span class="roztx">индивидуальные занятия</span>, продолжительность 2 (90 минут) академических часа,
+					стоимость 15 долларов США по курсу продажи в коммерческих банках РБ
+					за один академический час (30 долларов за занятие).
+				</p>
+				<p class="zgt">
+					- <span class="roztx">занятия в паре</span>, продолжительность 2 (90 минут) академических часа, стоимость
+					12,5 долларов США по курсу продажи в коммерческих банках РБ за один
+					академический час (25 долларов за занятие) 
+				</p>
+				<p class="zgt">
+					- <span class="roztx">занятия в мини-группах</span>, продолжительность 2 (90 минут) академических часа,
+					стоимость 10 долларов США по курсу продажи в коммерческих банках РБ
+					за один академический час (20 долларов за занятие)
+				</p>
+		</div></li>
+			</ol>
+			<h2 class="main"> 
+			<span class="h21">Литература для подготовки к ЦТ и ЦЭ по математике:</span>
+		    </h2>
 			<div id="realmain" class="zgt">
 				<p class="zgt">
-					За многолетний опыт работы собрано огромное количество необходимых материалов (все варианты ЦТ с момента основания, включая пробные, варианты экзаменов в различные колледжи и лицеи Беларуси).
+					- Генденштейн Л. Э. Наглядный справочник по математике с примерами (Илекса)
 				</p>
 				<p class="zgt">
-					1. Подготовка к ЦТ:
+					- В. В. Веременюк, В. В. Кожушко. Практикум по математике. Подготовка к тестированию и экзамену
 				</p>
 				<p class="zgt">
-					1 этап
+					- В. В. Веременюк, Е. А. Крушевский, И. Д. Беганская. Математика. Учимся быстро решать тесты
 				</p>
 				<p class="zgt">
-					- решение тестовых задач по разделам за курс базовой школы (5-9 классы);
+					- Основные учебные материалы предоставляю я
+				</p>
+		    </div>
+			<h2 class="main"> 
+			<span class="h21">Репетитор по русскому языку Игнатьева Марина Михайловна</span>
+		    </h2>
+			<p class="zgt">
+					Отмечу, что <span class="roztx">моя жена</span> проводит
+					<span class="roztx">подготовку к ЦЭ и ЦТ по русскому языку</span>.
+			</p>
+			<span class="p1">
+            <a href="russian-language-tutor.html">
+                Подробная информация о репетиторе по русскому языку 
+            </a>
+            <span class="strelki">&gt;&gt;</span>
+            </span>
+			<br>
+			<br>
+			<h2 class="main"> 
+			<span class="h21">Репетитор по математике для поступления в европейские вузы, вузы РФ и другие зарубежные вузы.</span>
+		    </h2>
+			<div id="realmain" class="zgt">
+				<p class="zgt">
+					- Уже долгие годы я периодически <span class="roztx">успешно подготавливаю</span>
+					учеников для поступления в <span class="roztx">престижные вузы Москвы,
+					европейские вузы</span> и другие
 				</p>
 				<p class="zgt">
-					- овладение полной теоретической базой 9 классов;
+					- Представление об уровне подготовки вы можете
+					составить по отзывам Святослава Чупахина и Никиты Даника
 				</p>
-				<p class="zgt">
-					- решение неполных  вариантов ЦТ (исключая материал 10-11 классов) прошлых лет.
-				</p>
-				<p class="zgt">
-					2 этап
-				</p>
-				<p class="zgt">
-					- решение тестовых задач по разделам за курс старшей школы (10-11 классы); 
-				</p>
-				<p class="zgt">
-					- овладение полной теоретической базой 10,11 классов;
-				</p>
-				<p class="zgt">
-					- решение неполных  вариантов ЦТ (материал 10-11 классов) прошлых лет.
-				</p>
-				<p class="zgt">
-					3 этап
-				</p>
-				<p class="zgt">
-					- решение полных вариантов ЦТ прошлых лет;
-				</p>
-				<p class="zgt">
-					- итоговое закрепление пройденного материала.
-				</p>
-				<p class="zgt">
-					2. Подготовка в колледж:
-				</p>
-				<p class="zgt">
-					1 этап
-				</p>
-				<p class="zgt">
-					- решение экзаменационных задач по разделам; 
-				</p>
-				<p class="zgt">
-					- овладение полной теоретической базой (при устном экзамене – с доказательствами).
-				</p>
-				<p class="zgt">
-					2 этап
-				</p>
-				<p class="zgt">
-					- решение полных экзаменационных вариантов прошлых лет;
-				</p>
-				<p class="zgt">
-					- итоговое закрепление пройденного материала.
-				</p>
-				<p class="zgt">
-					3. Процесс обучения предусматривает объемное домашнее задание, овладение методами и приемами, не встречавшимися ранее, разбор задач-ловушек, применение нестандартных ходов, аналитический подход. Используются варианты РИКЗ (для колледжей – варианты вступительных экзаменов в колледж) и авторские наработки.
-				</p>
-				<p class="zgt">
-					4. Предварительные результаты ЦТ 2014 таковы. На 100 баллов испытание по математике написали 16 абитуриентов. Из прошедших ЦТ по этому предмету 62 277 абитуриентов меньше чем 15 баллов набрали около 25 тыс. юношей и девушек, а 132 абитуриента написали тест на 0 баллов. На практике это означает, что 40% поступающих не набрали проходной балл (если перейти к 10-ти балльной системе, то не набрали и 2-х баллов). Разумеется, результаты моих учеников значительно выше. Но общий уровень знаний абитуриентов представить не сложно. Отмечу, что большинство из них занимались с репетиторами, не редко по принципу: Самый лучший репетитор - это самый дешевый репетитор, живущий рядом, а еще лучше, приезжающий на дом. Не стоит думать, что требования ЦТ завышены, они как раз достаточно объективны, а вот уровень знаний учеников, мягко сказать оставляет желать лучшего. Помните, главное, не  поступить, а  куда поступить. Важно получить не просто "корочку", а знания, которые принесут в дальнейшем достойный доход и положение.
-				</p>
-				<p class="zgt">
-					И еще, «проскочив» с минимальными баллами по математике на не весьма популярную специальность не самого престижного вуза, элементарно можно «выскочить» в самую первую сессию, так как даже для минимального восприятия высшей математике необходим достаточный уровень знаний.  Но принимать решение только Вам. Удачи на ЦТ 2015, хотя одной удачи будет мало.
-				</p>
-			</div>
+		    </div>
+			<span class="p1">
+            <a href="https://zoon.by/minsk/p-repetitor/igor_viktorovich_ignatev/">
+                Смотреть отзывы 
+            </a>
+            <span class="strelki">&gt;&gt;</span>
+            </span>
+			<p class="zgt">
+				Могу рекомендовать репетитора по физике для подготовке к ЦТ или ЦЭ. 
+			</p>
+			
+
+			
 		<div class="clear"></div>
 	</div>
 	<div class="clear"></div>
@@ -426,6 +542,17 @@
 					target="_blank">
 					<img class="img-service-rating" src="images/outlogo/google-rating.png" alt="Отзывы и рейтинг репетитора по математике в Google">
 				</a>
+
+
+
+
+
+
+
+
+
+
+
 				<br>
 				<a class="imagelink" 
 					href="https://yandex.by/maps/org/repetitor_po_matematike_i_vysshey_matematike_ignatyev_igor_viktorovich/1373635637/reviews/"
