--- a/uslovia_i_ceny2.html
+++ b/uslovia_i_ceny2.html
@@ -529,7 +529,7 @@
 				<span class="zg">Для получения информации об этапах подготовки к ЦТ по математике, условиях и ценах, репетиторе по русскому языку для подготовки к ЦТ и ЦЭ, подготовке по математике в зарубежные вузы, перейдите по ссылке:</span>
 			    </p>
 				<span class="p1">
-                <a href="russian-language-tutor.html">Информация о ценах, ЦТ по русскому, подготовке в зарубежные вузы </a>
+                <a href="metodika_prepodavania.html">Информация о ценах, ЦТ по русскому, подготовке в зарубежные вузы </a>
                 <span class="strelki">&gt;&gt;</span>
                 </span>
 				
